<resources>
    <string name="app_name">Blackjack_Final_Project</string>
    <string name="home_screen_header">Blackjack Mobile Game</string>
    <string name="bank_amount_textview">Bank: </string>
    <string name="bank_amount_edit_text_hint">Enter $ into your Bank</string>
    <string name="currency_conversion_button_text">Currency Exchange</string>
    <string name="game_rules_button_text">Game Rules</string>
    <string name="back_button_text">← Back</string>
    <string name="seekbar_text">Place Your Bet</string>
    <string name="deal_button">Deal</string>
    <string name="dealer_hand_total">Total: </string>
    <string name="user_hand_total">Total: </string>
    <string name="stand">Stand</string>
    <string name="double_text">Double</string>
    <string name="hit">Hit</string>
    <string name="split">Split</string>
    <string name="currency_exchange_header">Currency Exchange</string>
    <string name="dollar_euro">$ -> €</string>
    <string name="euro_dollar">€ -> $</string>
    <string name="confirm_exchange_text">Convert</string>
    <string name="play_button">Play</string>
    <string name="end_game_button_text">← End Game</string>
    <string name="bet_text">Bet: </string>
    <string name="gr">Game Rules!</string>
    <string name="beat_dealer">How do you beat the dealer?</string>
    <string name="beat_one">1) By drawing a hand value that is higher than the dealer’s hand value</string>
    <string name="beat_two">2) By the dealer drawing a hand value that goes over 21.</string>
    <string name="beat_three">3) By drawing a hand value of 21 on your first two cards, when the dealer does not.</string>
    <string name="lose_quest">How do you lose to the dealer?</string>
    <string name="lose_one">1) Your hand value exceeds 21.</string>
    <string name="lose_two">2) The dealers hand has a greater value than yours at the end of the round</string>
    <string name="played">Blackjack is played with a conventional deck of 52 playing cards and suits don’t matter.</string>
    <string name="count_one">1) 2 through 10 count at face value, i.e. a 2 counts as two, a 9 counts as nine.</string>
    <string name="count_two">2) Face cards (J,Q,K) count as 10.</string>.
    <string name="count_three">3) Ace can count as a 1 or an 11 depending on which value helps the hand the most.</string>
    <string name="black_jack">blackjack</string>
    <string name="title">Title</string>
    <string name="reset_game">Reset Game</string>
</resources>