<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/table_background">
<RelativeLayout
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <LinearLayout
       android:id="@+id/header_linear_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:layout_marginTop="10dp"
           android:id="@+id/bank_amount_textview"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
           android:text="@string/bank_amount_textview"
           android:textSize="20sp"
           android:layout_marginEnd="40dp"
           android:textColor="@color/white"/>
       <TextView
           android:id="@+id/home_screen_header"
           android:layout_marginTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/home_screen_header"
           android:layout_gravity="center"
           android:gravity="center"
           android:textSize="35sp"
           android:textColor="@color/white"/>

   </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_text_layout"
        android:layout_marginTop="220dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/header_linear_layout">

        <EditText
            android:id="@+id/bank_amount_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/bank_amount_edit_text_hint"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageButton
            android:id="@+id/submit_bank_amount_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/twotone_done_black_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_layout"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/grey"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/currency_conversion_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey"
            android:gravity="center"
            android:text="@string/currency_conversion_button_text" />

        <Button
            android:id="@+id/game_rules_button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey"
            android:text="@string/game_rules_button_text" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"

            android:layout_marginTop="30dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintHorizontal_bias="0.494"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toTopOf="parent"
            ads:layout_constraintVertical_bias="0.647">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>





</RelativeLayout>
</ScrollView>