<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_background">
    <LinearLayout
        android:id="@+id/gamescreen_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:backgroundTint="@color/grey"
            android:id="@+id/end_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game_button_text"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/bank_amount_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:text="@string/bank_amount_textview"
            android:textSize="20sp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gamescreen_header_layout">
        <TextView
            android:id="@+id/dealer_total_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dealer_hand_total"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp"
            android:textSize="20sp"
            android:visibility="invisible"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/card_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/gamescreen_header_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dealer_card_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="50dp"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/dealer_card_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="50dp"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/dealer_card_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="50dp"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/dealer_card_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="50dp"
            android:rotation="-10" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_linear_layout">
        <TextView
            android:id="@+id/user_total_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dealer_hand_total"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="40dp"
            android:textSize="20sp"
            android:visibility="invisible"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/card_linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/card_linear_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player_card_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/player_card_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/player_card_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="100dp"
            android:rotation="-10" />

        <ImageView
            android:id="@+id/player_card_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="100dp"
            android:rotation="-10" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/seekbar_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_linear_layout_2"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/seek_bar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seekbar_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bet_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bet_text"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/bet_amount_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="25"
            android:progressBackgroundTint="@color/white" />

        <Button
            android:id="@+id/deal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey"
            android:gravity="center"
            android:text="@string/deal_button" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seekbar_linear_layout">

        <Button
            android:id="@+id/stand_button"
            android:backgroundTint="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="12sp"
            android:text="@string/stand"/>
        <Button
            android:id="@+id/double_button"
            android:backgroundTint="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="6dp"
            android:textSize="12sp"
            android:text="@string/double_text"/>
            <Button
                android:id="@+id/hit_button"
                android:backgroundTint="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:textSize="12sp"
                android:text="@string/hit"/>

    </LinearLayout>

    <Button
        android:id="@+id/reset_game_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="65dp"
        android:gravity="center"
        android:textColor="@color/grey"
        android:foregroundGravity="center"
        android:layout_marginStart="140dp"
        android:text="@string/reset_game"
        android:visibility="invisible"/>

</RelativeLayout>